# leaf_repo

./: CMakeLists.txt  LICENSE  azure-iot-test-only.root.ca.cert.pem  dependencies.cmake  readme.md
cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  azure_iot_sdks.sln  cmake_install.cmake  parson.vcxproj  parson.vcxproj.filters
configs/: azure_iot_sdksConfig.cmake  azure_iot_sdksFunctions.cmake
digitaltwin_client/: CMakeLists.txt  readme.md
doc/: Docker_SDK_Cross_Compile.md  Iothub_sdk_options.md  SDK_cross_compile_example.md  c_sdk_resource_information.md  connection_and_messaging_reliability.md  devbox_setup.md  getting_started_with_ios.md  mbed_get_started.md  run_c_sdk_on_constrained_device.md  run_end_to_end_tests.md  sdk_cocoapods.md  setting_up_vcpkg.md  tizenRT_s5jt200_get_started.md  (+1 more)
jenkins/: mbed_c.cmd  (+8 more)
pnp_app/sensor_app/: CMakeLists.txt  Readme.md  main.c  pnp_device.c  pnp_device.h  sample_device_impl.c  sample_device_impl.h
pnp_app/sensor_app/utilities/: deviceinfo_interface.c  deviceinfo_interface.h  digitaltwin_client_helper.c  digitaltwin_client_helper.h  digitaltwin_serializer.c  digitaltwin_serializer.h  sensor_interface.c  sensor_interface.h
(+1321 files in other folders)
